--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@ layout: default
 title: Home
 ---
 
-<video></video>
+<div class="embed-responsive embed-responsive-16by9">
+    <iframe id="vplayer" type="text/html" class="embed-responsive-item"
+    src="https://www.youtube.com/embed/vx7SjxOdHUA?color=white&showinfo=0&modestbranding=1&rel=0"
+    frameborder="0">
+    </iframe>
+</div>
+
 <div class="cta">
     <div class="cta-item">
 
@@ -15,5 +21,4 @@ title: Home
 
     </div>
 </div>
-
 
