--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@ title: Home
 
     <div class="cta-item">
         <div class="cta-title">Get engaged</div>
-        <a href="{{ site.url }}/get-engaged">
+        <a href="{{ site.url }}/program-2017">
             <img src="/assets/get_engaged_thumbnail.jpg" alt="get-engaged-tn">
         </a>
         <div class="cta-article">
-            <a href="{{ site.url }}/get-engaged">
+            <a href="{{ site.url }}/program-2017">
                 <h4>
                     Join our 2017 Volunteer Mentors Program now
                 </h4>
@@ -52,7 +52,7 @@ title: Home
                 Participation of our Volunteer Mentors Program is open to any applicant above the age of 18. The teaching of our volunteers will enable students in Guiyang to question and learn about the wider world – apply now and make a real difference.
             </p>
             <div class="read-more">
-                <a href="{{ site.url }}/get-engaged">
+                <a href="{{ site.url }}/program-2017">
                     Read More
                 </a>
             </div>
